include = include_directories('.')
headers = {'libyuv': files(
  'libyuv/basic_types.h',
  'libyuv/compare.h',
  'libyuv/compare_row.h',
  'libyuv/convert_argb.h',
  'libyuv/convert_from_argb.h',
  'libyuv/convert_from.h',
  'libyuv/convert.h',
  'libyuv/cpu_id.h',
  'libyuv/loongson_intrinsics.h',
  'libyuv/macros_msa.h',
  'libyuv/mjpeg_decoder.h',
  'libyuv/planar_functions.h',
  'libyuv/rotate_argb.h',
  'libyuv/rotate.h',
  'libyuv/rotate_row.h',
  'libyuv/row.h',
  'libyuv/scale_argb.h',
  'libyuv/scale.h',
  'libyuv/scale_row.h',
  'libyuv/scale_uv.h',
  'libyuv/version.h',
  'libyuv/video_common.h',
), '.': files('libyuv.h')}
