source = files(
  'compare.cc',
  'compare_common.cc',
  'compare_gcc.cc',
  'compare_mmi.cc',
  'compare_msa.cc',
  'compare_neon64.cc',
  'compare_neon.cc',
  'compare_win.cc',
  'convert_argb.cc',
  'convert.cc',
  'convert_from_argb.cc',
  'convert_from.cc',
  'convert_to_argb.cc',
  'convert_to_i420.cc',
  'cpu_id.cc',
  'planar_functions.cc',
  'rotate_any.cc',
  'rotate_argb.cc',
  'rotate.cc',
  'rotate_common.cc',
  'rotate_gcc.cc',
  'rotate_lsx.cc',
  'rotate_mmi.cc',
  'rotate_msa.cc',
  'rotate_neon64.cc',
  'rotate_neon.cc',
  'rotate_win.cc',
  'row_any.cc',
  'row_common.cc',
  'row_gcc.cc',
  'row_lasx.cc',
  'row_lsx.cc',
  'row_mmi.cc',
  'row_msa.cc',
  'row_neon64.cc',
  'row_neon.cc',
  'row_win.cc',
  'scale_any.cc',
  'scale_argb.cc',
  'scale.cc',
  'scale_common.cc',
  'scale_gcc.cc',
  'scale_lsx.cc',
  'scale_mmi.cc',
  'scale_msa.cc',
  'scale_neon64.cc',
  'scale_neon.cc',
  'scale_uv.cc',
  'scale_win.cc',
  'video_common.cc',
)
